--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ input[type="text"],input[type="password"]{
 	-moz-transition:right 0.3s ease;
 	-ms-transition:right 0.3s ease;
 	-o-transition:right 0.3s ease;
+	z-index:999;
 }
 
 #mm-notification.open{
@@ -232,7 +233,7 @@ input[type="text"],input[type="password"]{
 	height:50px;
 	width:100%;
 	min-width:400px;
-	z-index:999;
+	z-index:100;
 }
 
 #title-block{
